--- a/wasm/My Project/Resources.resx
+++ b/wasm/My Project/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="wabt_1_0_11_win64" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\wabt-1.0.11-win64.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="wat2wasm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\wat2wasm.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
