--- a/src/WAT/My Project/Resources.resx
+++ b/src/WAT/My Project/Resources.resx
@@ -119,6 +119,6 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="wat2wasm" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\..\wasm.old\Resources\wat2wasm.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\..\..\dist\tools\wat2wasm.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
